Make GetAllTasks return a slice instead of a map
